feat: update file handling and path management in Expender classes and Gradle configuration